welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: ')' expected but ';' found.
	setPos(0;7);
                ^ColumnByColumn:2: error: ';' expected but ')' found.
	setPos(0;7);
                  ^